HHH-19283: Hibernate Gradle Plugin configuration cache support